Add comprehensive API setup documentation and Supabase schema
- Added detailed .env.example with all possible API keys
- Created API_SETUP.md guide for configuring each service
- Added complete Supabase database schema with RLS policies
- Documented pricing and setup steps for each API
- Added support for future features (auth, payments, analytics)

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,176 @@
-# Multi-AI Analysis API Keys
-# Add these to your .env file to enable real AI analysis
+# ===================================
+# GEO TRACKER ENVIRONMENT VARIABLES
+# ===================================
+
+# ===================================
+# CORE APIS - Required for GEO Tracking
+# ===================================
+
+# Serper API - For Google SERP Analysis (REQUIRED)
+# Get your key at: https://serper.dev
+# Pricing: $50/month for 2,500 searches
+VITE_SERPER_API_KEY=your_serper_api_key_here
+
+# Google API Key - For PageSpeed Insights (REQUIRED) 
+# Get your key at: https://console.cloud.google.com
+# Enable: PageSpeed Insights API
+# Pricing: Free tier available
+VITE_GOOGLE_API_KEY=your_google_api_key_here
+
+# ===================================
+# ADDITIONAL SEARCH APIS - Optional
+# ===================================
+
+# Bing Web Search API - For Bing/Copilot visibility
+# Get your key at: https://azure.microsoft.com/en-us/services/cognitive-services/bing-web-search-api/
+# Pricing: Free tier = 1,000 searches/month
+VITE_BING_API_KEY=
+
+# ValueSERP API - Alternative to Serper
+# Get your key at: https://www.valueserp.com
+# Pricing: $29/month for 5,000 searches
+VITE_VALUESERP_API_KEY=
+
+# SerpAPI - For detailed SERP features
+# Get your key at: https://serpapi.com
+# Pricing: $50/month for 5,000 searches
+VITE_SERPAPI_KEY=
+
+# ===================================
+# AI PROVIDER APIS - For Direct AI Testing
+# ===================================
 
 # OpenAI GPT-4 API
-VITE_OPENAI_API_KEY=your_openai_api_key_here
+# Get your key at: https://platform.openai.com/api-keys
+# Pricing: $0.03/1K tokens
+VITE_OPENAI_API_KEY=
 
 # Google Gemini Pro API
-VITE_GEMINI_API_KEY=your_gemini_api_key_here
+# Get your key at: https://aistudio.google.com/app/apikey
+# Pricing: Free tier available
+VITE_GEMINI_API_KEY=
 
-# Anthropic Claude 3.5 Sonnet API
-VITE_CLAUDE_API_KEY=your_claude_api_key_here
+# Anthropic Claude API
+# Get your key at: https://console.anthropic.com/account/keys
+# Pricing: $0.015/1K tokens
+VITE_CLAUDE_API_KEY=
 
 # Perplexity AI API
-VITE_PERPLEXITY_API_KEY=your_perplexity_api_key_here
+# Get your key at: https://www.perplexity.ai/settings/api
+# Pricing: $0.005/request
+VITE_PERPLEXITY_API_KEY=
 
-# Supabase Configuration (if using real database)
-VITE_SUPABASE_URL=your_supabase_url_here
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+# ===================================
+# DATABASE - Supabase Configuration
+# ===================================
+
+# Supabase - For user accounts and data persistence
+# Get your keys at: https://app.supabase.com
+# Pricing: Free tier = 500MB database, 2GB bandwidth
+VITE_SUPABASE_URL=https://your-project-ref.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key-here
+VITE_SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
+# ===================================
+# TECHNICAL SEO APIS - Optional
+# ===================================
+
+# Ahrefs API - For backlink analysis
+# Get your key at: https://ahrefs.com/api
+# Pricing: $500/month minimum
+VITE_AHREFS_API_KEY=
+
+# Moz API - For domain authority
+# Get your key at: https://moz.com/products/api
+# Pricing: $149/month
+VITE_MOZ_ACCESS_ID=
+VITE_MOZ_SECRET_KEY=
+
+# Screaming Frog API - For technical crawling
+# Get your key at: https://www.screamingfrog.co.uk/seo-spider/api/
+# Pricing: £149/year
+VITE_SCREAMING_FROG_KEY=
+
+# ===================================
+# MONITORING & ANALYTICS - Optional
+# ===================================
+
+# Google Analytics 4
+# Get ID at: https://analytics.google.com
+VITE_GA_MEASUREMENT_ID=
+
+# Sentry for Error Tracking
+# Get DSN at: https://sentry.io
+# Pricing: Free tier = 5K errors/month
+VITE_SENTRY_DSN=
+
+# PostHog for Product Analytics
+# Get key at: https://posthog.com
+# Pricing: Free tier = 1M events/month
+VITE_POSTHOG_API_KEY=
+VITE_POSTHOG_HOST=https://app.posthog.com
+
+# ===================================
+# PAYMENT PROCESSING - For Monetization
+# ===================================
+
+# Stripe
+# Get keys at: https://dashboard.stripe.com
+# Pricing: 2.9% + $0.30 per transaction
+VITE_STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+# Paddle
+# Get keys at: https://vendors.paddle.com
+# Pricing: 5% + $0.50 per transaction
+VITE_PADDLE_VENDOR_ID=
+VITE_PADDLE_API_KEY=
+
+# ===================================
+# EMAIL SERVICE - For Notifications
+# ===================================
+
+# Resend
+# Get key at: https://resend.com
+# Pricing: Free tier = 3,000 emails/month
+RESEND_API_KEY=
+
+# SendGrid
+# Get key at: https://sendgrid.com
+# Pricing: Free tier = 100 emails/day
+SENDGRID_API_KEY=
+
+# ===================================
+# APPLICATION SETTINGS
+# ===================================
+
+# Environment
+VITE_APP_ENV=development
+
+# API Configuration
+VITE_API_TIMEOUT=30000
+VITE_API_RETRY_ATTEMPTS=3
+VITE_ENABLE_API_LOGGING=false
+
+# Feature Flags
+VITE_ENABLE_AUTH=false
+VITE_ENABLE_PAYMENTS=false
+VITE_ENABLE_ANALYTICS=false
+
+# Rate Limiting
+VITE_FREE_TIER_SCANS_PER_WEEK=unlimited
+VITE_RATE_LIMIT_PER_MINUTE=10
+
+# URLs
+VITE_APP_URL=http://localhost:5173
+VITE_API_URL=http://localhost:3000
+
+# ===================================
+# NOTES
+# ===================================
+# 1. Copy this file to .env and add your actual keys
+# 2. Never commit .env to version control
+# 3. Add keys to Vercel environment variables for production
+# 4. Start with just VITE_SERPER_API_KEY and VITE_GOOGLE_API_KEY
+# 5. Add other APIs as needed
