--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^9.34.0",
     "@supabase/supabase-js": "^2.39.0",
+    "date-fns": "^2.30.0",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.8.0",
-    "recharts": "^2.8.0",
-    "jspdf": "^2.5.1",
-    "date-fns": "^2.30.0"
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
