Configure Sentry error tracking
- Added Sentry DSN to .env file
- Enabled sendDefaultPii for better error context
- Updated VERCEL_SETUP_CHECKLIST with Sentry status
- Ready for production error monitoring

IMPORTANT: Add VITE_SENTRY_DSN to Vercel environment variables

--- a/.env.example
+++ b/.env.example
@@ -102,7 +102,7 @@ VITE_GA_MEASUREMENT_ID=
 # Sentry for Error Tracking
 # Get DSN at: https://sentry.io
 # Pricing: Free tier = 5K errors/month
-VITE_SENTRY_DSN=
+VITE_SENTRY_DSN=your_sentry_dsn_here
 
 # PostHog for Product Analytics
 # Get key at: https://posthog.com
