--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sentry/react": "^9.34.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@vercel/analytics": "^1.5.0",
     "date-fns": "^2.30.0",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.344.0",
